add assets in order to not use `bower install`

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ results
 .sass-cache
 npm-debug.log
 node_modules
-public/tournamenter-obr/components
+public/tournamenter-obr/.components
 
 .tmp/
 
