--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tournamenter-obr",
-  "version": "2.1.2",
-  "description": "Plugin da OBR Regional para o Tournamenter",
+  "version": "3.0.0",
+  "description": "Plugin da OBR Regional para o Tournamenter. Importa e exporta diretamente do Sistema olimpo.",
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/http-server public/tournamenter-obr",
