--- a/package.json
+++ b/package.json
@@ -39,11 +39,16 @@
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.2",
     "cssnano": "^4.1.10",
+    "eslint": "^6.8.0",
+    "eslint-loader": "^4.0.0",
+    "eslint-plugin-angular": "^4.0.1",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-fetch": "^2.6.0",
     "postcss-loader": "^3.0.0",
+    "prettier": "^2.0.4",
+    "prettier-webpack-plugin": "^1.2.0",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "webpack": "^4.42.1",
